--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,18 @@ services:
     build: .
     container_name: portfolio-web
     restart: always
-    ports:
-      - "3000:3000"
     environment:
       - NODE_ENV=production
+    expose:
+      - "3000"
+
+  nginx:
+    image: nginx:alpine
+    container_name: portfolio-nginx
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - web
